--- a/CSS/Indexstyle.css
+++ b/CSS/Indexstyle.css
@@ -55,7 +55,7 @@ body {
 
 
 
-ul{
+.ul{
   display: flex;
   flex-direction: row;
   justify-content: space-around;
@@ -67,13 +67,13 @@ ul{
   cursor: pointer;
   font-weight: bold;
 }
-.btn:hover{
+/* .btn:hover{
 
  border: 4px solid grey;
  transition:all 0.5s ease-in-out;
  -webkit-transform: scale(1.1);
  transform: scale(1.1);
-}
+} */
 
 
 #about {
@@ -588,3 +588,71 @@ ul{
 .blog .link-box a:hover{
   color: #9C27B0;
 }
+
+
+/* ---------------------------------------------------------------------------------------------- */
+
+/* Md Ataurrab additional css */
+.custom-head h2, .custom-head p{
+  padding:0;
+  margin:0;  
+}
+.custom-image-tag{
+  display: inline-block;
+margin-bottom: 0;
+text-align: center;
+overflow: hidden;
+background-color: #9C27B0;
+  border-radius: 5px;
+  max-width: 100%;
+height: auto;
+-webkit-transition: all 500ms ease;
+-moz-transition: all 500ms ease;
+-ms-transition: all 500ms ease;
+-o-transition: all 500ms ease;
+transition: all 500ms ease;
+}
+.custom-image-tag:hover{
+  -webkit-transform: scale(1.1);
+  -moz-transform: scale(1.1);
+  -ms-transform: scale(1.1);
+  -o-transform: scale(1.1);
+  transform: scale(1.1);
+  box-shadow: 10px 8px 15px;
+  cursor: pointer;
+}
+.text-color{
+  color: #ffffff;
+}
+.custom-pad{
+  padding: 0 !important;
+}
+.modified-box{
+  Padding:30px;
+}
+.footer ul{
+  margin:0;
+  padding: 0;
+}
+.links{
+  display: flex;
+  justify-content: flex-end;
+}
+.links a{
+  font-size: 18px;
+  display: inline-block;
+  background: #1e4356;
+  color: #fff;
+  line-height: 1;
+  padding: 8px 0;
+  margin-right: 4px;
+  border-radius: 50%;
+  text-align: center;
+  width: 36px;
+  height: 36px;
+  transition: 0.3s;
+}
+.custom-pic{
+  height: 222.96px !important;
+}
+/* Md Ataurrab's additional  css */
