--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2179,7 +2179,7 @@ section {
 # Footer
 --------------------------------------------------------------*/
 #footer {
-  background: #0b212d;
+  background: #0b212d !important;
   padding: 0 0 30px 0;
   color: #fff;
   font-size: 14px;
